tests/errors/comb-component-groups.expect
---CODE---
1
---STDERR---
Error: tests/errors/comb-component-groups.futil
8 |    comb group g {
  |    ^^^^^^^^^^^^^^ Malformed Structure: Component `custom_lt` is marked combinational but contains a group `g`
